# pipes-pulse-simple

./: CHANGELOG.md  README.md  default.nix  pipes-pulse-simple.cabal
example/: Main.hs  cabal.project  example.cabal
src/Pipes/: PulseSimple.hs
