cabal-version:       2.4
name:                pipes-pulse-simple
version:             0.0.0.0
synopsis:            Pipes for simple-pulse audio
description:         Pipes for simple-pulse audio
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2021 Tristan de Cacqueray
category:            Sound
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

library
  build-depends:       base         < 5
                     , pulse-simple < 0.2.0.0
                     , pipes        < 4.4.0.0
                     , pipes-safe   < 3.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Pipes.PulseSimple
