cabal-version:       2.4
name:                example
version:             0.0.0.0
synopsis:            pipes-pulse-audio example usage
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2021 Tristan de Cacqueray
category:            Sound
build-type:          Simple

executable example
  build-depends:       base         < 5
                     , binary
                     , bytestring   < 0.12.0.0
                     , pipes        < 4.4.0.0
                     , pipes-safe   < 3.0.0
                     , pipes-pulse-simple
                     , time
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             Main.hs
